--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,43 @@
 {
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "search.exclude": {
-    "package-lock.json": true
+
+  // Use Prettier to format; ESLint only for fixes
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
+    "source.organizeImports": true
   },
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-  "editor.formatOnSave": false,
-  "editor.codeActionsOnSave": [
-    "source.addMissingImports",
-    "source.fixAll.eslint"
-  ],
-  "typescript.tsdk": "node_modules/typescript/lib", // Use the workspace version of TypeScript
-  "typescript.enablePromptUseWorkspaceTsdk": true, // For security reasons it's require that users opt into using the workspace version of typescript
-  "jest.autoRun": {
-    "watch": false // Start the jest with the watch flag
-    // "onStartup": ["all-tests"] // Run all tests upon project launch
-  },
-  "jest.showCoverageOnLoad": true, // Show code coverage when the project is launched
-  "jest.autoRevealOutput": "on-exec-error", // Don't automatically open test explorer terminal on launch
-  // Multiple language settings for json and jsonc files
+
+  // Use workspace TypeScript
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+
+  // Jest
+  "jest.autoRun": { "watch": false },
+  "jest.showCoverageOnLoad": true,
+  "jest.autoRevealOutput": "on-exec-error",
+
+  // Ensure Prettier formats these languages
+  "[javascript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[typescript]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[javascriptreact]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
+  "[typescriptreact]": { "editor.defaultFormatter": "esbenp.prettier-vscode" },
   "[json][jsonc][yaml]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "prettier.ignorePath": ".gitignore" // Don't run prettier for files listed in .gitignore
+
+  // Prettier extension settings (redundant if you add .prettierrc, but fine)
+  "prettier.singleQuote": true,
+  "prettier.endOfLine": "auto",
+  "prettier.ignorePath": ".gitignore",
+
+  // Also hint TS/JS language service to prefer single quotes
+  "javascript.preferences.quoteStyle": "single",
+  "typescript.preferences.quoteStyle": "single",
+
+  // Keep your search exclude
+  "search.exclude": { "package-lock.json": true }
 }
